--- a/04_livrable/website/punr/punr_ch01.html
+++ b/04_livrable/website/punr/punr_ch01.html
@@ -66,7 +66,7 @@
                écrivain devait garder les yeux fixés.</p>
             <p>Dans les revues, je trouvais souvent plus de sérieux. Mais je ne réussissais pas à
                me satisfaire d’être reconnu, goûté, étudié, par les seuls spécialistes qui m’avaient
-               encouragé dès le début&nbsp;; j’étais persuadé d’écrire pour le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;grand public&nbsp;»</span>, je souffrais d’être considéré comme un auteur <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;difficile&nbsp;»</span>. Mes étonnements, mes impatiences, étaient probablement d’autant plus vifs que j’ignorais
+               encouragé dès le début&nbsp;; j’étais persuadé d’écrire pour le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;grand public&nbsp;»</span>, je souffrais d’être considéré comme un auteur <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;difficile&nbsp;»</span>. Mes étonnements, mes impatiences, étaient probablement d’autant plus vifs que j’ignorais
                tout, par ma formation, des milieux littéraires et de leurs habitudes. Je publiais
                donc, dans un journal politico-littéraire à grand tirage (<span class="STDitalic">L’Express</span>), une série de brefs articles où j’exposais quelques idées qui me semblaient tomber
                sous le sens&nbsp;: disant par exemple que les formes romanesques doivent évoluer pour
@@ -76,8 +76,8 @@
             <p>Le résultat de ces articles ne fut pas ce que j’attendais. Ils firent du bruit, mais
                on les jugea, quasi-unanimement, à la fois simplistes et insensés. Poussé toujours
                par le désir de convaincre, je repris alors en les développant les principaux points
-               en litige, dans un essai un peu plus long qui parut dans <span class="STDitalic">La Nouvelle Revue française.</span> L’effet ne fut hélas pas meilleur&nbsp;; et cette récidive&nbsp;–&nbsp;qualifiée de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;manifeste&nbsp;»</span>&nbsp;–&nbsp;me fit en outre sacrer théoricien d’une nouvelle <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;école&nbsp;»</span> romanesque, dont on n’attendait évidemment rien de bon, et dans laquelle on s’empressa
-               de ranger, un peu au hasard, tous les écrivains qu’on ne savait pas où mettre. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;École du regard&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Roman objectif&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;École de Minuit&nbsp;»</span>, les appellations variaient&nbsp;; quant aux intentions que l’on me prêtait, elles étaient
+               en litige, dans un essai un peu plus long qui parut dans <span class="STDitalic">La Nouvelle Revue française.</span> L’effet ne fut hélas pas meilleur&nbsp;; et cette récidive&nbsp;–&nbsp;qualifiée de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;manifeste&nbsp;»</span>&nbsp;–&nbsp;me fit en outre sacrer théoricien d’une nouvelle <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;école&nbsp;»</span> romanesque, dont on n’attendait évidemment rien de bon, et dans laquelle on s’empressa
+               de ranger, un peu au hasard, tous les écrivains qu’on ne savait pas où mettre. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;École du regard&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Roman objectif&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;École de Minuit&nbsp;»</span>, les appellations variaient&nbsp;; quant aux intentions que l’on me prêtait, elles étaient
                en effet délirantes&nbsp;: chasser l’homme du monde, imposer ma propre écriture aux autres
                romanciers, détruire toute ordonnance dans la composition des livres, etc.</p>
             <p>Je tentais, dans de nouveaux articles, de mettre les choses au point, en éclairant
@@ -97,7 +97,7 @@
                absurde et vaine, mais qu’elle peut même devenir nuisible&nbsp;: en nous fermant les yeux
                sur notre situation réelle dans le monde présent, elle nous empêche en fin de compte
                de construire le monde et l’homme de demain.</p>
-            <p>Louer un jeune écrivain d’aujourd’hui parce qu’il <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;écrit comme Stendhal&nbsp;»</span> représente une double malhonnêteté. D’une part cette prouesse n’aurait rien d’admirable,
+            <p>Louer un jeune écrivain d’aujourd’hui parce qu’il <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;écrit comme Stendhal&nbsp;»</span> représente une double malhonnêteté. D’une part cette prouesse n’aurait rien d’admirable,
                comme on vient de le voir&nbsp;; d’autre part il s’agit là d’une chose parfaitement impossible&nbsp;:
                pour écrire comme <span class="ref">Stendhal</span>, il faudrait d’abord écrire en 1830. Un écrivain qui réussirait un habile pastiche,
                si habile même qu’il produirait des pages que <span class="ref">Stendhal</span> aurait pu signer à l’époque, n’aurait en aucune façon la valeur qui serait encore
@@ -118,8 +118,8 @@
                contre les belles-lettres, mais on démontra de surcroît comment il était normal qu’il
                fût à ce point exécrable, puisqu’il s’avouait le produit de la préméditation&nbsp;: son
                auteur&nbsp;–&nbsp;ô scandale&nbsp;!&nbsp;–&nbsp;se permettait d’avoir des opinions sur son propre métier.</p>
-            <p>Ici encore, on constate que les mythes du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle conservent toute leur puissance&nbsp;: le grand romancier, le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;génie&nbsp;»</span>, est une sorte de monstre inconscient, irresponsable et fatal, voire légèrement imbécile,
-               de qui partent des <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;messages&nbsp;»</span> que seul le lecteur doit déchiffrer. Tout ce qui risque d’obscurcir le jugement de
+            <p>Ici encore, on constate que les mythes du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle conservent toute leur puissance&nbsp;: le grand romancier, le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;génie&nbsp;»</span>, est une sorte de monstre inconscient, irresponsable et fatal, voire légèrement imbécile,
+               de qui partent des <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;messages&nbsp;»</span> que seul le lecteur doit déchiffrer. Tout ce qui risque d’obscurcir le jugement de
                l’écrivain est plus ou moins admis comme favorisant l’éclosion de son œuvre. L’alcoolisme,
                le malheur, la drogue, la passion mystique, la folie, ont tellement encombré les biographies
                plus ou moins romancées des artistes qu’il semble désormais tout naturel de voir là des nécessités essentielles de leur triste condition, de voir en
@@ -162,10 +162,10 @@
                de sa création, et en insistant sur l’intérêt que présente pour lui la conscience de sa propre recherche, nous savons que c’est surtout au niveau de l’écriture
                que cette recherche s’opère, et que tout n’est pas clair à l’instant de la décision.
                Ainsi, après avoir indisposé les critiques en parlant de la littérature dont il rêve,
-               le romancier se sent soudain démuni lorsque ces mêmes critiques lui demandent&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Expliquez-nous donc pourquoi vous avez écrit ce livre, ce qu’il signifie, ce que
+               le romancier se sent soudain démuni lorsque ces mêmes critiques lui demandent&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Expliquez-nous donc pourquoi vous avez écrit ce livre, ce qu’il signifie, ce que
                   vous vouliez faire, dans quelle intention vous avez employé ce mot, construit cette
                   phrase de telle manière&nbsp;?&nbsp;»</span></p>
-            <p>Devant de pareilles questions, on dirait que son <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;intelligence&nbsp;»</span> ne lui est plus d’aucun secours. Ce qu’il a voulu faire, c’est seulement ce livre
+            <p>Devant de pareilles questions, on dirait que son <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;intelligence&nbsp;»</span> ne lui est plus d’aucun secours. Ce qu’il a voulu faire, c’est seulement ce livre
                lui-même. Cela ne veut pas dire qu’il en soit satisfait toujours&nbsp;; mais l’œuvre demeure,
                dans tous les cas, la meilleure et la seule expression possible de son projet. S’il
                avait eu la faculté d’en fournir une définition plus simple, ou de ramener ses deux
@@ -179,7 +179,7 @@
                de refuser tel adjectif, de construire ce paragraphe de telle façon. Il met tout son
                soin à la lente recherche du mot exact et de son juste emplacement. Mais de cette nécessité il ne peut produire aucune preuve (sinon, parfois, après coup).
                Il supplie qu’on le croie, qu’on lui fasse confiance. Et lorsqu’on lui demande pourquoi
-               il a écrit son livre, il n’a qu’une réponse&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;C’est pour essayer de savoir pourquoi j’avais envie de l’écrire.&nbsp;»</span></p>
+               il a écrit son livre, il n’a qu’une réponse&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;C’est pour essayer de savoir pourquoi j’avais envie de l’écrire.&nbsp;»</span></p>
             <div class="smallgap"></div>
             <p>Quant à dire où va le roman, personne évidemment ne peut le faire avec certitude.
                Il est d’ailleurs probable que différentes voies continueront d’exister pour lui parallèlement.
