--- a/04_livrable/website/punr/punr_ch06.html
+++ b/04_livrable/website/punr/punr_ch06.html
@@ -52,21 +52,21 @@
             <h3 id="d1e2105">Énigmes et transparence chez Raymond&nbsp;Roussel <br><span class="STDsmall">(1963)</span></h3>
             <p class="first"><span class="ref">Raymond&nbsp;Roussel</span> décrit&nbsp;; et, au-delà de ce qu’il décrit, il n’y a rien, rien de ce qui peut traditionnellement
                s’appeler un message. Pour reprendre une des expressions favorites de la critique
-               littéraire académique, <span class="ref">Roussel</span> ne semble guère avoir <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;quelque chose à dire&nbsp;»</span>. Aucune transcendance, aucun dépassement humaniste, ne peuvent s’appliquer aux séries
+               littéraire académique, <span class="ref">Roussel</span> ne semble guère avoir <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;quelque chose à dire&nbsp;»</span>. Aucune transcendance, aucun dépassement humaniste, ne peuvent s’appliquer aux séries
                d’objets, de gestes et d’événements qui constituent, dès la première vue, son univers.</p>
             <p>Il arrive que, pour les besoins d’une ligne descriptive très stricte, il ait à nous
                conter quelque anecdote psychologique, ou bien quelque coutume religieuse imaginaire,
                un récit de mœurs primitives, une allégorie métaphysique... Mais ces éléments n’ont
-               jamais aucun <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;contenu&nbsp;»</span>, aucune profondeur, ils ne peuvent constituer en aucun cas le plus modeste apport
+               jamais aucun <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;contenu&nbsp;»</span>, aucune profondeur, ils ne peuvent constituer en aucun cas le plus modeste apport
                à l’étude des caractères humains ou des passions, la plus petite contribution à la
                sociologie, la moindre méditation philosophique. Il s’agit toujours en effet de sentiments
                ouvertement conventionnels (amour filial, dévouement, grandeur d’âme, traîtrise, et
-               toujours traités à la manière des images d’Épinal), ou bien de rites <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;gratuits&nbsp;»</span>, ou de symbolismes reconnus et de philosophies usées. Entre le non-sens absolu et
+               toujours traités à la manière des images d’Épinal), ou bien de rites <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;gratuits&nbsp;»</span>, ou de symbolismes reconnus et de philosophies usées. Entre le non-sens absolu et
                le sens épuisé il ne reste encore une fois que les choses elles-mêmes, objets, gestes,
                etc.</p>
             <p>Sur le plan du langage, <span class="ref">Roussel</span> ne répond guère mieux aux exigences de la critique. Beaucoup l’ont déjà signalé,
                et bien entendu pour s’en plaindre&nbsp;: <span class="ref">Raymond&nbsp;Roussel</span> écrit mal. Son style est terne et neutre. Lorsqu’il sort de l’ordre du constat&nbsp;–&nbsp;c’est-à-dire
-               de la platitude avouée&nbsp;: le domaine du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;il y a&nbsp;»</span> et du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;se trouve placé à une certaine distance&nbsp;»</span>&nbsp;–, c’est toujours pour tomber dans l’image banale, dans la métaphore la plus rebattue,
+               de la platitude avouée&nbsp;: le domaine du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;il y a&nbsp;»</span> et du <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;se trouve placé à une certaine distance&nbsp;»</span>&nbsp;–, c’est toujours pour tomber dans l’image banale, dans la métaphore la plus rebattue,
                sortie elle aussi de quelque arsenal des conventions littéraires. Enfin l’organisation
                sonore des phrases, le rythme des mots, leur musique ne semblent poser pour l’auteur
                aucun problème d’oreille. Le résultat est presque continuellement sans attrait du
@@ -120,7 +120,7 @@
                nous explique ensuite longuement la signification (toujours <span class="STDitalic">immédiate,</span> au ras des mots) de la phrase-devinette, et comment elle se rapporte directement
                à la statue, dont les détails étranges se révèlent alors comme tout à fait nécessaires,
                etc. Or ces élucidations en chaîne, extraordinairement complexes, ingénieuses, et
-               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;tirées par les cheveux&nbsp;»</span>, paraissent si dérisoires, si décevantes, que c’est comme si le mystère demeurait
+               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;tirées par les cheveux&nbsp;»</span>, paraissent si dérisoires, si décevantes, que c’est comme si le mystère demeurait
                intact. Mais c’est désormais un mystère lavé, vidé, qui est devenu innommable. L’opacité
                ne cache plus rien. On a l’impression d’avoir trouvé un tiroir fermé, puis une clef&nbsp;;
                et cette clef ouvre le tiroir de façon impeccable... et le tiroir est vide.</p>
@@ -146,7 +146,7 @@
             <p>Car il faut insister sur l’importance que <span class="ref">Roussel</span> attache à cette très légère <span class="STDitalic">modification</span> de son séparant les deux phrases-clefs, sans parler de la modification générale du
                sens. Le récit a opéré sous nos yeux, d’une part un changement profond de ce que signifie
                le monde&nbsp;–&nbsp;et le langage&nbsp;–, d’autre part un infime décalage superficiel (la lettre
-               altérée)&nbsp;; le texte <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;se mord la queue&nbsp;»</span>, mais avec une petite irrégularité, une petite entorse... et qui change tout.</p>
+               altérée)&nbsp;; le texte <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;se mord la queue&nbsp;»</span>, mais avec une petite irrégularité, une petite entorse... et qui change tout.</p>
             <p>Fréquemment aussi, nous trouvons la simple <span class="STDitalic">reproduction</span> plastique, comme cette mosaïque que dessine la hie déjà citée. Les exemples abondent,
                que ce soit dans les romans, les pièces ou les poèmes, de ces images de toutes sortes&nbsp;:
                statues, gravures, tableaux, ou même dessins grossiers sans aucun caractère artistique.
