--- a/04_livrable/website/punr/punr_ch07.html
+++ b/04_livrable/website/punr/punr_ch07.html
@@ -66,7 +66,7 @@
                s’il collectionne les médicaments&nbsp;–&nbsp;ou même les absorbe parfois&nbsp;–&nbsp;ce n’est guère dans une intention à proprement parler thérapeutique&nbsp;;
                bien entendu, il se moque autant de la psychanalyse que des traitements par l’électricité
                ou la gymnastique. Dès les premiers feuillets nous trouvons sa profession de foi&nbsp;:
-               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;La maladie est une conviction et je suis né avec cette conviction.&nbsp;»</span> Quelque chose, en somme, comme la grâce.</p>
+               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;La maladie est une conviction et je suis né avec cette conviction.&nbsp;»</span> Quelque chose, en somme, comme la grâce.</p>
             <p>La nature exacte et l’importance exclusive de cette conviction, voilà ce que son récit
                tente d’éclaircir en trois cent cinquante pages de grand format. L’univers dans lequel
                il nous plonge, à la fois grotesque, fantastique et parfaitement quotidien, atteint
@@ -75,7 +75,7 @@
                du repliement sur soi. Son état ne peut inspirer ni l’incrédulité ni l’irritation&nbsp;;
                il est évident, nécessaire, incurable. À l’inverse de la complaisance morbide, où
                le malade s’installe dans ses douleurs comme dans une sorte de confort, il s’agit
-               au contraire ici d’une lutte de chaque seconde pour conquérir la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;bonne santé&nbsp;»</span>, considérée comme le bien suprême, qui s’accompagne en même temps d’une entière sérénité
+               au contraire ici d’une lutte de chaque seconde pour conquérir la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;bonne santé&nbsp;»</span>, considérée comme le bien suprême, qui s’accompagne en même temps d’une entière sérénité
                intérieure&nbsp;–&nbsp;harmonie de l’âme, bonté, pureté, <span class="STDitalic">innocence</span>&nbsp;–&nbsp;et de manifestations externes de caractère plus pratique&nbsp;: l’élégance, la désinvolture,
                la ruse, la réussite en affaires, la faculté de séduire les femmes et de bien jouer
                du violon&nbsp;–&nbsp;au lieu de ne tirer de celui-ci que des grincements horribles, comme du
@@ -85,7 +85,7 @@
                pour les autres.</p>
             <p>Ainsi en va-t-il en particulier des rapports avec le temps. Le temps de Zeno est un
                temps malade. C’est pour cette raison qu’entre autres calamités il ne peut jouer bien
-               d’aucun instrument de musique&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;L’être le plus bas, quand il sait ce que sont les tierces, les quartes, les sixtes,
+               d’aucun instrument de musique&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;L’être le plus bas, quand il sait ce que sont les tierces, les quartes, les sixtes,
                   sait également passer de l’une à l’autre... Mais moi, quand j’ai produit une de ces
                   figures, je ne puis plus m’en libérer&nbsp;; elle adhère à moi, elle contamine la figure
                   suivante et la déforme.&nbsp;»</span> Lorsque dans une conversation il prononce une phrase, la plus simple soit-elle, il
@@ -94,13 +94,13 @@
                il les perd à calculer qu’il n’aurait pas eu besoin de plus pour le mener à bien.
                Il décide de ne plus fumer, parce que le tabac est cause de tous ses maux&nbsp;; aussitôt
                son temps se voit divisé et dévoré par les dates successives et toujours reculées
-               de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;dernière cigarette&nbsp;»</span>, qu’il inscrit à l’avance sur les murs de sa chambre&nbsp;–&nbsp;de sorte que, les murs en
+               de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;dernière cigarette&nbsp;»</span>, qu’il inscrit à l’avance sur les murs de sa chambre&nbsp;–&nbsp;de sorte que, les murs en
                étant couverts, il doit bientôt déménager. Mais au milieu de l’engluement la mort
                frappe autour de lui amis et parents, et chaque fois il se trouve pris au dépourvu,
                comprenant soudain qu’il ne pourra plus jamais leur prouver sa bonne volonté et son
                innocence.</p>
             <p>Zeno ne fait pas étalage de sa maladie. Il essaie de ne pas en parler, de se comporter
-               comme tout le monde dans la mesure du possible. Même, il a <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;pris définitivement les dehors d’un homme joyeux&nbsp;»</span>. De la table familiale, où il arrive à l’heure en bon époux, au bureau où il tient
+               comme tout le monde dans la mesure du possible. Même, il a <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;pris définitivement les dehors d’un homme joyeux&nbsp;»</span>. De la table familiale, où il arrive à l’heure en bon époux, au bureau où il tient
                avec zèle un emploi non rétribué de comptable, de la Lloyd à la Bourse, du lit de
                sa maîtresse à la maison de beaux-parents qui l’estiment, nous suivons avidement les
                déambulations de ce chasseur qui se traque lui-même sans merci. Et nous le plaçons
@@ -113,27 +113,27 @@
                côté parce qu’un autre l’a représenté sur une caricature transpercé par son parapluie),
                et dont il souffre ensuite pour le restant de ses jours, sont proches parentes de
                celles du capitaine Achab, qui a perdu sa jambe dans la lutte contre la baleine blanche,
-               ou de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">Molloy</span> que la paralysie gagne progressivement depuis le pied. Sa mort, Zeno la connaît d’avance&nbsp;:
+               ou de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">Molloy</span> que la paralysie gagne progressivement depuis le pied. Sa mort, Zeno la connaît d’avance&nbsp;:
                elle commencera par la gangrène des membres inférieurs. Il n’est pas jusqu’à cette
-               ville <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;irrédente&nbsp;»</span> de Trieste, où l’on ne parle pas l’italien mais un dialecte mêlé d’allemand et de
-               croate, qui ne fasse songer au Prague germano-tchèque de <span class="ref">Kafka</span> et au Dublin anglo-irlandais de <span class="ref">Joyce</span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Une confession <a id="page_99"></a>écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
+               ville <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;irrédente&nbsp;»</span> de Trieste, où l’on ne parle pas l’italien mais un dialecte mêlé d’allemand et de
+               croate, qui ne fasse songer au Prague germano-tchèque de <span class="ref">Kafka</span> et au Dublin anglo-irlandais de <span class="ref">Joyce</span>&nbsp;–&nbsp;patries de tous ceux qui ne sont pas à l’aise dans leur propre langue. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une confession <a id="page_99"></a>écrite est toujours mensongère, et nous (les Triestins), c’est à chaque mot toscan
                   que nous mentons&nbsp;!&nbsp;»</span></p>
             <p>Par surcroît, le narrateur est de mauvaise foi. En présentant son récit, le psychanalyste
                précise qu’il contient une bonne quantité de mensonges. Zeno lui-même en signale quelques-uns
                au passage. Mais comment traiter ici quoi que ce soit de mensonge, puisque chaque
                événement est accompagné d’une longue analyse qui le discrédite et le nie&nbsp;? Un jour
                qu’il n’a pas réussi par cette méthode à embrouiller suffisamment la situation, Zeno
-               déclare&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Elle était si claire que je n’y comprenais plus rien.&nbsp;»</span> Après avoir accumulé les indices d’un classique complexe d’Œdipe avec transferts
+               déclare&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Elle était si claire que je n’y comprenais plus rien.&nbsp;»</span> Après avoir accumulé les indices d’un classique complexe d’Œdipe avec transferts
                multiples, il entre en fureur contre le médecin qui n’a pu éviter de le remarquer&nbsp;;
                puis il rajoute exprès, à l’appui de cette thèse, quelques éléments faux. Il opère
-               de façon analogue dans ses relations avec ses amis ou sa famille&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Si je n’avais pas tout défiguré, j’aurais jugé inutile d’ouvrir la bouche.&nbsp;»</span> À la fin, il découvre que son analyse est capable de convertir la santé en maladie&nbsp;;
+               de façon analogue dans ses relations avec ses amis ou sa famille&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Si je n’avais pas tout défiguré, j’aurais jugé inutile d’ouvrir la bouche.&nbsp;»</span> À la fin, il découvre que son analyse est capable de convertir la santé en maladie&nbsp;;
                qu’à cela ne tienne&nbsp;: il décide alors qu’il faut soigner la bonne santé.</p>
             <p>Cette bonne santé qu’il veut soigner&nbsp;–&nbsp;ou cette mauvaise santé&nbsp;–&nbsp;cette <span class="STDitalic">conscience</span> comme l’indique le titre de l’ouvrage, il finit par l’appeler tout simplement la
-               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;vie&nbsp;»</span>, qui, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;à la différence des autres maladies, est toujours mortelle&nbsp;»</span>.</p>
+               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;vie&nbsp;»</span>, qui, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;à la différence des autres maladies, est toujours mortelle&nbsp;»</span>.</p>
             <p>La guerre éclate entre l’Italie et l’Autriche. Paradoxalement, le héros prétend découvrir
                son équilibre dans les transactions commerciales effrénées auxquelles l’extension
                du conflit ouvre la porte. Et le livre s’achève sur une étonnante note d’espoir&nbsp;:
-               un jour, un homme <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;fait comme les autres, mais un peu plus malade&nbsp;»</span>, déposera un explosif d’une puissance encore inconnue au centre de la terre. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Une détonation formidable que nul n’entendra&nbsp;–&nbsp;et la terre, revenue à l’état de
+               un jour, un homme <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;fait comme les autres, mais un peu plus malade&nbsp;»</span>, déposera un explosif d’une puissance encore inconnue au centre de la terre. <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Une détonation formidable que nul n’entendra&nbsp;–&nbsp;et la terre, revenue à l’état de
                   nébuleuse, continuera sa course dans les cieux délivrée des hommes&nbsp;–&nbsp;sans parasites,
                   sans maladies.&nbsp;»</span></p>
             <p>Temps malade, langage malade, libido malade, démarche malade, vie malade, conscience
