--- a/04_livrable/website/punr/punr_ch11.html
+++ b/04_livrable/website/punr/punr_ch11.html
@@ -63,7 +63,7 @@
          </div>
          <article>
             <h3 id="d1e3736">Nouveau roman, homme nouveau<br><span class="STDsmall">(1961)</span></h3>
-            <p class="first">On a beaucoup écrit sur le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Nouveau Roman&nbsp;»</span> depuis quelques années. Malheureusement, parmi les critiques qu’on lui prodiguait,
+            <p class="first">On a beaucoup écrit sur le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Nouveau Roman&nbsp;»</span> depuis quelques années. Malheureusement, parmi les critiques qu’on lui prodiguait,
                et aussi, souvent, parmi les éloges, il y avait tant de simplifications extrêmes,
                tant d’erreurs, tant de malentendus, qu’une sorte de mythe monstrueux a fini par se
                constituer, dans l’esprit du grand public, pour qui, semble-t-il, le Nouveau Roman
@@ -96,7 +96,7 @@
                   respectives&nbsp;–&nbsp;celle de <span class="ref">Claude&nbsp;Simon</span> et la mienne, par exemple&nbsp;–&nbsp;des différences considérables, et nous pensons que c’est
                   très bien ainsi. Quel intérêt y aurait-il à ce que nous écrivions tous les deux, si
                   nous écrivions la même chose&nbsp;?</p>
-               <p>Mais ces différences n’ont-elles pas toujours existé au sein de toutes les <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;écoles&nbsp;»</span>&nbsp;? Ce que l’on trouve de commun entre les individus, dans chacun des mouvements littéraires
+               <p>Mais ces différences n’ont-elles pas toujours existé au sein de toutes les <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;écoles&nbsp;»</span>&nbsp;? Ce que l’on trouve de commun entre les individus, dans chacun des mouvements littéraires
                   de notre histoire, c’est surtout la volonté d’échapper à une sclérose, le besoin de
                   quelque chose d’autre. Sur quoi se sont toujours groupés les artistes, sinon sur le
                   refus des formes périmées qu’on cherchait à leur imposer&nbsp;? Les formes vivent et meurent,
@@ -108,7 +108,7 @@
                   nous sommes rencontrés. Il y avait, il y a encore, en France tout spécialement, une
                   théorie du roman implicitement reconnue par tout le monde ou presque, et que l’on
                   opposait comme un mur à tous les livres que nous faisions paraître. On nous disait&nbsp;:
-                  <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Vous ne campez pas de personnage, donc vous n’écrivez pas de vrais romans&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;vous ne racontez pas une histoire, donc vous n’écrivez pas de vrais romans&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;vous n’étudiez pas un caractère, ni un milieu, vous n’analysez pas les passions,
+                  <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Vous ne campez pas de personnage, donc vous n’écrivez pas de vrais romans&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;vous ne racontez pas une histoire, donc vous n’écrivez pas de vrais romans&nbsp;»</span>, <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;vous n’étudiez pas un caractère, ni un milieu, vous n’analysez pas les passions,
                      donc vous n’écrivez pas de vrais romans&nbsp;»</span>, etc.</p>
                <p>Mais nous, au contraire, qu’on accuse d’être des théoriciens, nous ne savons pas ce
                   que doit être un roman, un vrai roman&nbsp;; nous savons seulement que le roman d’aujourd’hui
@@ -119,8 +119,8 @@
             <div id="" type="subsection">
                <h4 id="d1e3793">Le Nouveau&nbsp;Roman ne fait que poursuivre une évolution constante du genre romanesque.</h4>
                <div class="smallgap"></div>
-               <p>L’erreur est de croire que le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;vrai roman&nbsp;»</span> s’est figé une fois pour toutes, à l’époque balzacienne, en des règles strictes et
-                  définitives. Non seulement l’évolution a été considérable depuis le milieu du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle, mais elle a commencé tout de suite, à l’époque de <span class="ref">Balzac</span> lui-même. Celui-ci ne relève-t-il pas déjà de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;confusion&nbsp;»</span> dans les descriptions de <span class="STDitalic">La Chartreuse de Parme&nbsp;?</span> Il est certain que la bataille de Waterloo, telle que <span class="ref">Stendhal</span> nous la rapporte, n’appartient plus déjà à l’ordre balzacien.</p>
+               <p>L’erreur est de croire que le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;vrai roman&nbsp;»</span> s’est figé une fois pour toutes, à l’époque balzacienne, en des règles strictes et
+                  définitives. Non seulement l’évolution a été considérable depuis le milieu du <span class="STDsc">xix</span><span class="STDexposant">e</span> siècle, mais elle a commencé tout de suite, à l’époque de <span class="ref">Balzac</span> lui-même. Celui-ci ne relève-t-il pas déjà de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;confusion&nbsp;»</span> dans les descriptions de <span class="STDitalic">La Chartreuse de Parme&nbsp;?</span> Il est certain que la bataille de Waterloo, telle que <span class="ref">Stendhal</span> nous la rapporte, n’appartient plus déjà à l’ordre balzacien.</p>
                <p>Et, depuis, l’évolution n’a cessé de s’accentuer&nbsp;: <span class="ref">Flaubert</span>, <span class="ref">Dostoïevsky</span>, <span class="ref">Proust</span>, <span class="ref">Kafka</span>, <span class="ref">Joyce</span>, <span class="ref">Faulkner</span>, <span class="ref">Beckett</span>... Loin de faire table rase du passé, c’est sur les noms de nos prédécesseurs que
                   nous nous sommes le plus aisément mis d’accord&nbsp;; et notre ambition est seulement de
                   les continuer. Non pas de faire mieux, ce qui n’a aucun sens, mais de nous placer
@@ -140,7 +140,7 @@
             </div>
             <div id="" type="subsection">
                <h4 id="d1e3856">Le Nouveau&nbsp;Roman ne s’intéresse qu’à l’homme et à sa situation dans le monde.</h4>
-               <p>Comme il n’y avait pas, dans nos livres, de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;personnages&nbsp;»</span> au sens traditionnel du mot, on en a conclu, un peu hâtivement, qu’on n’y rencontrait
+               <p>Comme il n’y avait pas, dans nos livres, de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnages&nbsp;»</span> au sens traditionnel du mot, on en a conclu, un peu hâtivement, qu’on n’y rencontrait
                   pas d’hommes du tout. C’était bien mal les lire. L’homme y est présent à chaque page,
                   à chaque ligne, à chaque mot. Même si l’on y trouve beaucoup d’objets, et décrits
                   avec minutie, il y a toujours et d’abord le regard qui les voit, la pensée qui les
@@ -157,7 +157,7 @@
                   plage, dans ma tête) et toute forme d’imagination.</p>
                <p>Quant à ce que l’on appelle plus précisément des <span class="STDitalic">choses,</span> il y en a toujours eu beaucoup dans le roman. Que l’on songe à <span class="ref">Balzac</span>&nbsp;: maisons, mobilier, vêtements, bijoux, ustensiles, machines, tout y est décrit avec
                   un soin qui n’a rien à envier aux ouvrages modernes. Si ces objets-là sont, comme
-                  on dit, plus <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;humains&nbsp;»</span> que les nôtres, c’est seulement&nbsp;–&nbsp;et nous y reviendrons&nbsp;–&nbsp;que la situation de l’homme
+                  on dit, plus <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;humains&nbsp;»</span> que les nôtres, c’est seulement&nbsp;–&nbsp;et nous y reviendrons&nbsp;–&nbsp;que la situation de l’homme
                   dans le monde qu’il habite n’est plus aujourd’hui la même qu’il y a cent ans. Et non
                   pas du tout parce que notre description serait trop neutre, trop objective, puisque
                   justement elle ne l’est pas.</p>
@@ -167,7 +167,7 @@
                <h4 id="d1e3880">Le Nouveau&nbsp;Roman ne vise qu’à une subjectivité totale.</h4>
                <div class="smallgap"></div>
                <p>Comme il y avait beaucoup d’objets dans nos livres, et qu’on leur trouvait quelque
-                  chose d’insolite, on a bien vite fait un sort au mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;objectivité&nbsp;»</span>, prononcé à leur sujet par certains critiques dans un sens pourtant très spécial&nbsp;:
+                  chose d’insolite, on a bien vite fait un sort au mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;objectivité&nbsp;»</span>, prononcé à leur sujet par certains critiques dans un sens pourtant très spécial&nbsp;:
                   tourné vers l’objet. Pris dans son sens habituel&nbsp;–&nbsp;neutre, froid, impartial&nbsp;–, le mot devenait une absurdité. Non seulement
                   c’est un homme qui, dans mes romans par exemple, décrit toute chose, mais c’est le
                   moins neutre, le moins impartial des hommes&nbsp;: engagé au contraire <span class="STDitalic">toujours</span> dans une aventure passionnelle des plus obsédantes, au point de déformer souvent
@@ -247,8 +247,8 @@
                   significations morales. L’art est plus modeste&nbsp;–&nbsp;ou plus ambitieux&nbsp;–&nbsp;: pour lui, rien
                   n’est jamais connu d’avance.</p>
                <p>Avant l’œuvre, il n’y a rien, pas de certitude, pas de thèse, pas de message. Croire
-                  que le romancier a <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;quelque chose à dire&nbsp;»</span>, et qu’il cherche ensuite comment le dire, représente le plus grave des contresens.
-                  Car c’est précisément ce <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;comment&nbsp;»</span>, cette manière de dire, qui constitue son projet d’écrivain, projet obscur entre tous, et qui sera plus tard le contenu douteux de son livre. C’est
+                  que le romancier a <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;quelque chose à dire&nbsp;»</span>, et qu’il cherche ensuite comment le dire, représente le plus grave des contresens.
+                  Car c’est précisément ce <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;comment&nbsp;»</span>, cette manière de dire, qui constitue son projet d’écrivain, projet obscur entre tous, et qui sera plus tard le contenu douteux de son livre. C’est
                   peut-être, en fin de compte, ce contenu douteux d’un obscur projet de forme qui servira
                   le mieux la cause de la liberté. Mais à quelle échéance&nbsp;?</p>
             </div>
