--- a/04_livrable/website/punr/punr_ch12.html
+++ b/04_livrable/website/punr/punr_ch12.html
@@ -84,7 +84,7 @@
                évolution s’accomplissant selon des règles prévisibles. Et les choses se compliquent encore lorsqu’il s’agit d’un art trop récent, le cinéma par exemple, où
                le manque de recul rend toute extrapolation impraticable. Aussi n’est-il pas toujours
                inutile que les auteurs, bien qu’ils ne possèdent pas par nature plus de lumières,
-               apportent leur contribution <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;théorique&nbsp;»</span> à cette recherche.</p>
+               apportent leur contribution <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;théorique&nbsp;»</span> à cette recherche.</p>
             <div class="smallgap"></div>
             <p>On a souvent remarqué, et à juste titre, la grande place tenue par les descriptions
                dans ce qu’il est convenu d’appeler Nouveau Roman, en particulier dans mes propres
@@ -110,7 +110,7 @@
                souvent de planter un décor, de définir le cadre de l’action, de présenter l’apparence
                physique de ses protagonistes. Le poids des choses ainsi posées de façon précise constituait
                un univers stable et sûr, auquel on pouvait ensuite se référer, et qui garantissait
-               par sa ressemblance avec le monde <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;réel&nbsp;»</span> l’authenticité des événements, des paroles, des gestes que le romancier y ferait
+               par sa ressemblance avec le monde <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;réel&nbsp;»</span> l’authenticité des événements, des paroles, des gestes que le romancier y ferait
                survenir. L’assurance tranquille avec laquelle s’imposaient la disposition des lieux,
                la décoration des intérieurs, la forme des habits, comme aussi les signes sociaux
                ou caractériels contenus dans chaque élément et par lesquels celui-ci justifiait sa
@@ -157,7 +157,7 @@
                mouvement de création et de gommage, que l’on retrouve d’ailleurs dans le livre à
                tous les niveaux et en particulier dans sa structure globale&nbsp;–&nbsp;d’où vient la <span class="STDitalic">déception</span> inhérente aux œuvres d’aujourd’hui.</p>
             <p>Le souci de précision qui confine parfois au délire (ces notions si peu visuelles
-               de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;droite&nbsp;»</span> et de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;gauche&nbsp;»</span>, ces comptages, ces mensurations, ces repères géométriques) ne parvient pas à empêcher
+               de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;droite&nbsp;»</span> et de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;gauche&nbsp;»</span>, ces comptages, ces mensurations, ces repères géométriques) ne parvient pas à empêcher
                le monde d’être mouvant jusque dans ses aspects les plus matériels, et même au sein
                de son apparente immobilité. Il ne s’agit plus ici de temps qui coule, puisque paradoxalement les gestes ne sont
                au contraire donnés que figés dans l’instant. C’est la matière elle-même qui est à
@@ -197,19 +197,19 @@
                sur lui par la plupart des feuilletonnistes&nbsp;; mais il peut être intéressant de noter
                certains de leurs reproches, plus révélateurs souvent que des éloges. Voici donc les
                points sur lesquels se sont portées les attaques les plus fréquentes et les plus violentes&nbsp;:
-               d’abord le manque de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;naturel&nbsp;»</span> dans le jeu des acteurs, ensuite l’impossibilité de distinguer clairement ce qui
-               est <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;réel&nbsp;»</span> de ce qui est mental (souvenir ou phantasme), enfin la tendance des éléments à forte
-               charge passionnelle à se transformer en <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;cartes-postales&nbsp;»</span> (touristiques pour la ville d’Istamboul, érotiques pour l’héroïne, etc.).</p>
+               d’abord le manque de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;naturel&nbsp;»</span> dans le jeu des acteurs, ensuite l’impossibilité de distinguer clairement ce qui
+               est <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;réel&nbsp;»</span> de ce qui est mental (souvenir ou phantasme), enfin la tendance des éléments à forte
+               charge passionnelle à se transformer en <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;cartes-postales&nbsp;»</span> (touristiques pour la ville d’Istamboul, érotiques pour l’héroïne, etc.).</p>
             <p>On voit que ces trois reproches n’en constituent au fond qu’un seul&nbsp;: la structure
                du film ne donne pas assez confiance dans la vérité objective des choses. Deux remarques,
                à ce sujet, s’imposent. D’une part, Istamboul est une <span class="STDitalic">vraie</span> ville, et c’est bien elle que l’on voit d’un bout à l’autre de la projection&nbsp;; de
                même l’héroïne est incarnée à l’écran par une <span class="STDitalic">vraie</span> femme. D’autre part, pour ce qui est de l’histoire, il est évident qu’elle est fausse&nbsp;:
                ni l’acteur ni l’actrice ne sont morts au cours du tournage, ni même le chien. Ce
-               qui déroute les spectateurs épris de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;réalisme&nbsp;»</span>, c’est que l’on n’essaie plus ici de leur faire croire à rien&nbsp;–&nbsp;je dirais presque&nbsp;:
+               qui déroute les spectateurs épris de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;réalisme&nbsp;»</span>, c’est que l’on n’essaie plus ici de leur faire croire à rien&nbsp;–&nbsp;je dirais presque&nbsp;:
                au contraire... Le <span class="STDitalic">vrai,</span> le <span class="STDitalic">faux</span> et le <span class="STDitalic">faire croire</span> sont devenus plus ou moins le sujet de toute œuvre moderne&nbsp;; celle-ci, au lieu d’être
                un prétendu morceau de réalité, se développe en tant que réflexion sur la réalité
                (ou sur le <span class="STDitalic">peu de réalité,</span> comme on voudra). Elle ne cherche plus à cacher son caractère nécessairement mensonger,
-               en se présentant comme une <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;histoire vécue&nbsp;»</span>. Si bien que nous retrouvons là, dans l’écriture cinématographique, une fonction
+               en se présentant comme une <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;histoire vécue&nbsp;»</span>. Si bien que nous retrouvons là, dans l’écriture cinématographique, une fonction
                voisine de celle assumée par la description en littérature&nbsp;: l’image ainsi traitée
                (quant aux acteurs, au décor, au montage, dans ses rapports avec le son, etc.) empêche
                de croire en même temps qu’elle affirme, comme la description empêchait de voir ce
@@ -224,7 +224,7 @@
                le présent de l’indicatif. Film et roman se rencontrent en tout cas, aujourd’hui,
                dans la construction d’instants, d’intervalles et de successions qui n’ont plus rien
                à voir avec ceux des horloges ou du calendrier. Essayons d’en préciser un peu le rôle.</p>
-            <p>On a beaucoup répété, ces dernières années, que le temps était le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;personnage&nbsp;»</span> principal du roman contemporain. Depuis <span class="ref">Proust</span>, depuis <span class="ref">Faulkner</span>, les retours dans le passé, les ruptures de chronologie, semblent en effet à la base
+            <p>On a beaucoup répété, ces dernières années, que le temps était le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnage&nbsp;»</span> principal du roman contemporain. Depuis <span class="ref">Proust</span>, depuis <span class="ref">Faulkner</span>, les retours dans le passé, les ruptures de chronologie, semblent en effet à la base
                de l’organisation même du récit, de son architecture. Il en serait de même évidemment
                du cinéma&nbsp;: toute œuvre cinématographique moderne serait une réflexion sur la mémoire
                humaine, ses incertitudes, son entêtement, ses drames, etc.</p>
@@ -232,7 +232,7 @@
                essentiel de beaucoup d’œuvres du début du siècle et de leurs séquelles, comme il
                l’était déjà d’ailleurs d’œuvres du siècle dernier, les recherches actuelles semblent
                au contraire mettre en scène, le plus souvent, des structures mentales privées de
-               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;temps&nbsp;»</span>. Et c’est justement ce qui les rend au premier abord si déroutantes. Je prendrai
+               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;temps&nbsp;»</span>. Et c’est justement ce qui les rend au premier abord si déroutantes. Je prendrai
                quelques exemples, encore, dans mes propres livres ou films, dont la grande critique a, sur ce point, presque toujours faussé le sens.</p>
             <p><span class="STDitalic">L’Année dernière à Marienbad,</span> à cause de son titre, à cause aussi des œuvres dont <span class="ref">Alain&nbsp;Resnais</span> avait auparavant réalisé la mise en scène, a d’emblée été interprété comme une de
                ces variations psychologiques sur l’amour perdu, l’oubli, le souvenir. Les questions
@@ -249,7 +249,7 @@
                Leur existence ne dure que ce que dure le film. Il ne peut y avoir de réalité en dehors
                des images que l’on voit, des paroles que l’on entend.</p>
             <p>Ainsi la durée de l’œuvre moderne n’est-elle en aucune manière un résumé, un condensé,
-               d’une durée plus étendue et plus <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;réelle&nbsp;»</span> qui serait celle de l’anecdote, de l’histoire racontée. Il y a au contraire identité
+               d’une durée plus étendue et plus <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;réelle&nbsp;»</span> qui serait celle de l’anecdote, de l’histoire racontée. Il y a au contraire identité
                absolue entre les deux durées. Toute l’histoire de <span class="STDitalic">Marienbad</span> ne se passe ni en deux ans, ni en trois jours, mais exactement en une heure et demie. Et, quand à la fin
                du film les deux héros se retrouvent pour partir ensemble, c’est comme si la jeune
                femme admettait qu’il y a eu bel et bien quelque chose entre eux l’année dernière
@@ -265,9 +265,9 @@
                dans la tête de quelqu’un. Mais de qui&nbsp;? Du héros narrateur&nbsp;? Ou de l’héroïne hypnotisée&nbsp;?
                Ou bien, par un échange constant d’images entre eux, des deux ensemble&nbsp;? Il vaudrait
                mieux admettre une solution d’un autre ordre&nbsp;: de même que le seul temps qui importe
-               est celui du film, le seul <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;personnage&nbsp;»</span> important est le spectateur&nbsp;; c’est <span class="STDitalic">dans sa tête</span> que se déroule toute l’histoire, qui est exactement <span class="STDitalic">imaginée </span>par lui.</p>
+               est celui du film, le seul <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;personnage&nbsp;»</span> important est le spectateur&nbsp;; c’est <span class="STDitalic">dans sa tête</span> que se déroule toute l’histoire, qui est exactement <span class="STDitalic">imaginée </span>par lui.</p>
             <p>Encore une fois, l’œuvre n’est pas un témoignage sur une réalité extérieure, mais
-               elle est à elle-même sa propre réalité. Aussi est-il impossible à l’auteur de rassurer tel spectateur inquiet sur le sort des héros après le mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;fin&nbsp;»</span>. Après le mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;fin&nbsp;»</span>, il ne se passe plus rien du tout, par définition. Le seul avenir que l’œuvre puisse
+               elle est à elle-même sa propre réalité. Aussi est-il impossible à l’auteur de rassurer tel spectateur inquiet sur le sort des héros après le mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;fin&nbsp;»</span>. Après le mot <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;fin&nbsp;»</span>, il ne se passe plus rien du tout, par définition. Le seul avenir que l’œuvre puisse
                accepter, c’est un nouveau déroulement identique&nbsp;: en remettant les bobines du film
                dans l’appareil à projections.</p>
             <p>De même, il était absurde de croire que dans le roman <span class="STDitalic">La Jalousie,</span> publié deux ans plus tôt, existait un ordre des événements, clair et univoque, et
@@ -292,7 +292,7 @@
             <p>Tandis que, dans le récit moderne, on dirait que le temps se trouve coupé de sa temporalité.
                Il ne coule plus. Il n’accomplit plus rien. Et c’est sans doute ce qui explique cette
                déception qui suit la lecture d’un livre d’aujourd’hui, ou la représentation d’un
-               film. Autant il y avait quelque chose de satisfaisant dans un <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;destin&nbsp;»</span>, même tragique, autant les plus belles des œuvres contemporaines nous laissent vides,
+               film. Autant il y avait quelque chose de satisfaisant dans un <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;destin&nbsp;»</span>, même tragique, autant les plus belles des œuvres contemporaines nous laissent vides,
                décontenancés. Non seulement elles ne prétendent à aucune autre réalité que celle
                de la lecture, ou du spectacle, mais encore elles semblent toujours en train de se
                contester, de se mettre en doute elles-mêmes à mesure qu’elles se construisent. Ici
@@ -303,7 +303,7 @@
                discontinuité spatiale <span class="STDitalic">déprend</span> du piège de l’anecdote. Ces descriptions dont le mouvement enlève toute confiance
                dans les choses décrites, ces héros sans naturel comme sans identité, ce présent qui
                s’invente sans cesse, comme au fil de l’écriture, qui se répète, se dédouble, se modifie,
-               se dément, sans jamais s’entasser pour constituer un passé&nbsp;–&nbsp;donc une <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;histoire&nbsp;»</span> au sens traditionnel&nbsp;–, tout cela ne peut que convier le lecteur (ou le spectateur)
+               se dément, sans jamais s’entasser pour constituer un passé&nbsp;–&nbsp;donc une <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;histoire&nbsp;»</span> au sens traditionnel&nbsp;–, tout cela ne peut que convier le lecteur (ou le spectateur)
                à un autre mode de participation que celui dont il avait l’habitude. S’il est conduit
                parfois à condamner les œuvres de son époque, c’est-à-dire celles qui s’adressent
                le plus directement à lui, s’il se plaint même d’être délibérément délaissé, tenu
