--- a/04_livrable/website/punr/punr_ch02.html
+++ b/04_livrable/website/punr/punr_ch02.html
@@ -60,7 +60,7 @@
             <p>Sans mal on pourrait même remonter jusqu’à madame de La Fayette. La sacro-sainte analyse
                psychologique constituait, déjà à cette époque, la base de toute prose&nbsp;: c’est elle
                qui présidait à la conception du livre, à la peinture des personnages, au déroulement
-               de l’intrigue. Un <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;bon&nbsp;»</span> roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
+               de l’intrigue. Un <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;bon&nbsp;»</span> roman, depuis lors, est resté l’étude d’une passion&nbsp;–&nbsp;ou d’un conflit de passions,
                ou d’une absence de passion&nbsp;–&nbsp;dans un milieu donné. La plupart de nos romanciers contemporains du type traditionnel&nbsp;–&nbsp;c’est-à-dire
                ceux qui justement recueillent l’approbation des consommateurs&nbsp;–&nbsp;pourraient recopier
                de longs passages de <span class="STDitalic">La Princesse de Clèves</span> ou du <span class="STDitalic">Père Goriot</span> sans éveiller les soupçons du vaste public qui dévore leur production. À peine y
@@ -73,13 +73,13 @@
                peu à peu, si les techniques industrielles ont fait des progrès considérables, notre
                civilisation mentale, elle, est bien restée la même. Nous vivons pratiquement sur
                les mêmes habitudes et les mêmes interdits, moraux, alimentaires, religieux, sexuels,
-               hygiéniques, familiaux, etc. Enfin, il y a le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;cœur&nbsp;»</span> humain qui&nbsp;–&nbsp;c’est bien connu&nbsp;–&nbsp;est éternel. Tout est dit et l’on vient trop tard,
+               hygiéniques, familiaux, etc. Enfin, il y a le <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;cœur&nbsp;»</span> humain qui&nbsp;–&nbsp;c’est bien connu&nbsp;–&nbsp;est éternel. Tout est dit et l’on vient trop tard,
                etc., etc.</p>
             <p>Le risque de telles rebuffades s’accroît encore si l’on ose prétendre que cette littérature
                nouvelle, non seulement est désormais possible, mais est en train déjà de voir le
                jour, et qu’elle va représenter&nbsp;–&nbsp;en s’accomplissant&nbsp;–&nbsp;une révolution plus totale
                que celles d’où naquirent, jadis, le romantisme ou le naturalisme.</p>
-            <p>Il y a forcément du ridicule dans une pareille promesse&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Maintenant les choses vont changer&nbsp;!&nbsp;»</span>Comment feraient-elles pour changer&nbsp;? Vers quoi iraient-elles&nbsp;? Et, surtout, pourquoi
+            <p>Il y a forcément du ridicule dans une pareille promesse&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Maintenant les choses vont changer&nbsp;!&nbsp;»</span>Comment feraient-elles pour changer&nbsp;? Vers quoi iraient-elles&nbsp;? Et, surtout, pourquoi
                maintenant&nbsp;?</p>
             <p>Devant l’art romanesque actuel, cependant, la lassitude est si grande&nbsp;–&nbsp;enregistrée
                et commentée par l’ensemble de la critique&nbsp;–&nbsp;qu’on imagine mal que cet art puisse
@@ -96,7 +96,7 @@
                prêts à reconnaître la valeur d’une recherche, restent malgré tout les héritiers d’une
                tradition. Or, inconsciemment jugée par référence aux formes consacrées, une forme
                nouvelle paraîtra toujours plus ou moins une absence de forme. Ne lit-on pas, dans
-               un de nos plus célèbres dictionnaires encyclopédiques, à l’article <span class="ref">Schönberg</span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
+               un de nos plus célèbres dictionnaires encyclopédiques, à l’article <span class="ref">Schönberg</span>&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Auteur d’œuvres audacieuses, sans souci d’aucune règle&nbsp;»</span>&nbsp;! Ce bref jugement se trouve sous la rubrique <span class="STDitalic">Musique</span>, évidemment rédigée par un spécialiste.</p>
             <p>Le nouveau-né balbutiant sera toujours considéré comme un monstre, même par ceux que
                l’expérience passionne. Il y aura de la curiosité, des mouvements d’intérêt, des réserves
                quant à l’avenir. Parmi les louanges sincères, la plupart s’adresseront aux vestiges
@@ -122,8 +122,8 @@
                s’ajouter aux choses, leur donnant un aspect moins étranger, plus compréhensible,
                plus rassurant. Parfois le camouflage est complet&nbsp;: un geste s’efface de notre esprit
                au profit des émotions supposées qui lui auraient donné naissance, nous retenons qu’un
-               paysage est <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;austère&nbsp;»</span> ou <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;calme&nbsp;»</span> sans pouvoir en citer aucune ligne, aucun des éléments principaux. Même si nous pensons
-               aussitôt&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;C’est de la littérature&nbsp;»</span>, nous n’essayons pas de nous révolter. Nous sommes habitués à ce que cette littérature
+               paysage est <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;austère&nbsp;»</span> ou <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;calme&nbsp;»</span> sans pouvoir en citer aucune ligne, aucun des éléments principaux. Même si nous pensons
+               aussitôt&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;C’est de la littérature&nbsp;»</span>, nous n’essayons pas de nous révolter. Nous sommes habitués à ce que cette littérature
                (le mot est devenu péjoratif) fonctionne comme une grille, munie de verres diversement
                colorés, qui décompose notre champ de perception en petits carreaux assimilables.</p>
             <p>Et si quelque chose résiste à cette appropriation systématique, si un élément du monde
@@ -165,7 +165,7 @@
                de ce monde reproduit nous révèle, en même temps, le caractère <span class="STDitalic">inhabituel</span> du monde qui nous entoure&nbsp;: inhabituel, lui aussi, dans la mesure où il refuse de
                se plier à nos habitudes d’appréhension et à notre ordre.</p>
             <div class="smallgap"></div>
-            <p>À la place de cet univers des <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;significations&nbsp;»</span> (psychologiques, sociales, fonctionnelles), il faudrait donc essayer de construire
+            <p>À la place de cet univers des <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;significations&nbsp;»</span> (psychologiques, sociales, fonctionnelles), il faudrait donc essayer de construire
                un monde plus solide, plus immédiat. Que ce soit d’abord par leur <span class="STDitalic">présence</span> que les objets et les gestes s’imposent, et que cette présence continue ensuite à
                dominer, par-dessus toute théorie explicative qui tenterait de les enfermer dans un
                quelconque système de référence, sentimental, sociologique, freudien, métaphysique,
@@ -177,7 +177,7 @@
                rejeter cet auxiliaire gênant dans l’oubli, dans les ténèbres.</p>
             <p>Désormais, au contraire, les objets peu à peu perdront leur inconstance et leurs secrets,
                renonceront à leur faux mystère, à cette intériorité suspecte qu’un essayiste a nommée
-               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;le cœur romantique des choses&nbsp;»</span>. Celles-ci ne seront plus le vague reflet de l’âme vague du héros, l’image de ses
+               <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;le cœur romantique des choses&nbsp;»</span>. Celles-ci ne seront plus le vague reflet de l’âme vague du héros, l’image de ses
                tourments, l’ombre de ses désirs. Ou plutôt, s’il arrive encore aux choses de servir
                un instant de support aux passions humaines, ce ne sera que temporairement, et elles
                n’accepteront la tyrannie des significations qu’en apparence –&nbsp;comme par dérision&nbsp;–&nbsp;pour
@@ -214,8 +214,8 @@
             <p>Tout cela semblerait peut-être bien théorique, bien illusoire, si précisément quelque
                chose n’était en train de changer&nbsp;–&nbsp;et même d’une façon totale, sans doute définitive&nbsp;–&nbsp;dans
                les rapports que nous entretenons avec l’univers. Aussi entrevoyons-nous la réponse
-               à cette question pleine d’ironie&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;Pourquoi maintenant&nbsp;?&nbsp;»</span> Il y a aujourd’hui, en effet, un élément nouveau, qui nous sépare cette fois radicalement
-               de <span class="ref">Balzac</span>, comme de <span class="ref">Gide</span> ou de madame de La Fayette&nbsp;: c’est la destitution des vieux mythes de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;profondeur&nbsp;»</span>.</p>
+               à cette question pleine d’ironie&nbsp;: <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;Pourquoi maintenant&nbsp;?&nbsp;»</span> Il y a aujourd’hui, en effet, un élément nouveau, qui nous sépare cette fois radicalement
+               de <span class="ref">Balzac</span>, comme de <span class="ref">Gide</span> ou de madame de La Fayette&nbsp;: c’est la destitution des vieux mythes de la <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;profondeur&nbsp;»</span>.</p>
             <p>On sait que toute la littérature romanesque reposait sur eux, sur eux seuls. Le rôle
                de l’écrivain consistait traditionnellement à creuser dans la <span class="ref">Nature</span>, à l’approfondir, pour atteindre des couches de plus en plus intimes et finir par
                mettre au jour quelque bribe d’un secret troublant. Descendu dans l’abîme des passions
@@ -231,8 +231,8 @@
             <p>La révolution qui s’est accomplie est de taille&nbsp;: non seulement nous ne considérons
                plus le monde comme notre bien, notre propriété privée, calquée sur nos besoins et
                domesticable, mais par surcroît nous ne croyons plus à cette profondeur. Tandis que
-               les conceptions essentialistes de l’homme voyaient leur ruine, l’idée de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;condition&nbsp;»</span> remplaçant désormais celle de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;nature&nbsp;»</span>, la <span class="STDitalic">surface</span> des choses a cessé d’être pour nous le masque de leur cœur, sentiment qui préludait
-               à tous les <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9');">«&nbsp;au-delà&nbsp;»</span> de la métaphysique.</p>
+               les conceptions essentialistes de l’homme voyaient leur ruine, l’idée de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;condition&nbsp;»</span> remplaçant désormais celle de <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;nature&nbsp;»</span>, la <span class="STDitalic">surface</span> des choses a cessé d’être pour nous le masque de leur cœur, sentiment qui préludait
+               à tous les <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;au-delà&nbsp;»</span> de la métaphysique.</p>
             <p>C’est donc tout le langage littéraire qui devrait changer, qui déjà change. Nous constatons,
                de jour en jour, la répugnance croissante des plus conscients devant le mot à caractère
                viscéral, analogique ou incantatoire. Cependant que l’adjectif optique, descriptif,
